tests/baselines/reference/overloadOnConstAsTypeAnnotation.errors.txt
tests/cases/compiler/overloadOnConstAsTypeAnnotation.ts(2,5): error TS2322: Type 'string' is not assignable to type '(x: "hi") => number'.
tests/cases/compiler/overloadOnConstAsTypeAnnotation.ts(2,37): error TS1005: ';' expected.


==== tests/cases/compiler/overloadOnConstAsTypeAnnotation.ts (2 errors) ====
    
    var f: (x: 'hi') => number = ('hi') => { return 1; };
        ~
!!! error TS2322: Type 'string' is not assignable to type '(x: "hi") => number'.
                                        ~~
!!! error TS1005: ';' expected.